proyect documentation and dtos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 spring.jpa.hibernate.ddl-auto=update
+
+springdoc.version=2.8.5
+springdoc.swagger-ui.path=/swagger-ui.html
